--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,9 +35,39 @@
             <Button
                 android:id="@+id/button_appLanguage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="0.5"
                 android:text="@string/settings_language" />
+
+            <TextView
+                android:id="@+id/settings_title_backup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="2sp"
+                android:text="@string/settings_title_backup"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/settings_backup_import"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00202020"
+                android:gravity="left|center_vertical"
+                android:padding="5sp"
+                android:text="@string/settings_backup_import"
+                android:visibility="gone"
+                tools:ignore="RtlHardcoded" />
+
+            <Button
+                android:id="@+id/settings_backup_export"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00FFFFFF"
+                android:gravity="left|center_vertical"
+                android:padding="5sp"
+                android:text="@string/settings_backup_export"
+                android:visibility="gone"
+                tools:ignore="RtlHardcoded" />
 
         </LinearLayout>
     </ScrollView>
