--- a/app/src/main/res/xml-v17/widget_date_info.xml
+++ b/app/src/main/res/xml-v17/widget_date_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:initialKeyguardLayout="@layout/widget_date"
     android:initialLayout="@layout/widget_date"
     android:minWidth="40dp"
@@ -8,5 +7,4 @@
     android:previewImage="@drawable/date_widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"
-    tools:targetApi="jelly_bean_mr1" />
+    android:widgetCategory="home_screen" />
